--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=tool-dbxsec.my.id'>
+  <meta http-equiv='refresh' content='0; URL=http://tool-dbxsec.my.id'>
 </head>
